2009-12-04  Ivan Maidanski <ivmai@mail.ru>

	* mark_rts.c (GC_approx_sp): Add a comment (for GCC).

2009-12-04  Ivan Maidanski <ivmai@mail.ru>

	* include/gc_version.h, configure.ac, doc/README: Change to
	version 7.2alpha5.
	* configure: Regenerate.

[7.2alpha4]

2009-12-01  Ivan Maidanski <ivmai@mail.ru>

	* include/gc_version.h, configure.ac, doc/README: Change to
	version 7.2alpha4.
	* configure: Regenerate.

2009-11-21  Ivan Maidanski <ivmai@mail.ru>

	* configure.ac (AC_CONFIG_COMMANDS): Quote srcdir value.
	* configure: Regenerate.

2009-11-18  Ivan Maidanski <ivmai@mail.ru> (really mostly Zoltan Varga)

	* include/gc.h (GC_get_suspend_signal): New function declaration.
	* misc.c (GC_get_suspend_signal): New API function (only if
	THREADS).

2009-11-16  Ivan Maidanski <ivmai@mail.ru>

	* alloc.c (min_bytes_allocd): Multiply GC_free_space_divisor by
	two if GC_incremental (instead of TRUE_INCREMENTAL).

2009-11-10  Ivan Maidanski <ivmai@mail.ru>

	* sparc_mach_dep.S (GC_push_regs): Remove the reference.

2009-11-09  Ivan Maidanski <ivmai@mail.ru>

	* os_dep.c (SIZE_T, PULONG_PTR): Remove.
	* os_dep.c (ULONG_PTR): Replace with GC_ULONG_PTR (defined as GC
	"word"); add the comment.
	* os_dep.c (GetWriteWatch_type, detect_GetWriteWatch,
	GC_gww_read_dirty): Prefix ULONG_PTR with "GC_".

2009-11-07  Ivan Maidanski <ivmai@mail.ru>

	* win32_threads.c (THREAD_TABLE_SZ): Change back to a power-of-two
	const value (for speed).
	* win32_threads.c (THREAD_TABLE_INDEX): New macro.
	* win32_threads.c (GC_new_thread, GC_lookup_thread_inner,
	GC_delete_gc_thread, GC_delete_thread, GC_lookup_pthread): Use
	THREAD_TABLE_INDEX instead of THREAD_TABLE_SZ.
	* win32_threads.c (PTHREAD_MAP_HASH): Rename to PTHREAD_MAP_INDEX.

2009-11-07  Ivan Maidanski <ivmai@mail.ru>

	* win32_threads.c (THREAD_TABLE_SZ): Make the const value prime.

2009-11-06  Ivan Maidanski <ivmai@mail.ru>

	* backgraph.c: Remove apostrophe char from "#error".

2009-11-06  Ivan Maidanski <ivmai@mail.ru>
